test/parse/module/bad-memory-segment-address.txt
;;; ERROR: 1
(module
  (memory 100)
  (data foo))
(;; STDERR ;;;
parse/module/bad-memory-segment-address.txt:4:9: unexpected token "foo"
  (data foo))
        ^^^
parse/module/bad-memory-segment-address.txt:4:12: syntax error, unexpected ), expecting ( or NAT or VAR
  (data foo))
           ^
;;; STDERR ;;)
